--- a/LR-1/task.ipynb
+++ b/LR-1/task.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Проведем обучение модели. Выставим желаемую точность модели на 85%. Для достижения желаемой точности проведем серию обучений с разным количеством итераций (начальное значение 100). Количество итераций будет увеличиваться на 100, если после проверки обученной модели на валидационных данных требуемая точность не будет достигнута."
+    "Проведем обучение модели. Выставим желаемую точность модели на 82%. Для достижения желаемой точности проведем серию обучений с разным количеством итераций (начальное значение 1000). Количество итераций будет увеличиваться на 100, если после проверки обученной модели на валидационных данных требуемая точность не будет достигнута."
    ]
   },
   {
@@ -229,10 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Создание и обучение модели логистической регрессии\n",
-    "\n",
-    "max_iter = 100\n",
-    "accuracy_desire = 0.85\n",
+    "max_iter = 1000\n",
+    "accuracy_desire = 0.82\n",
     "\n",
     "while True:\n",
     "    model = LogisticRegression(max_iter=max_iter)\n",
@@ -246,24 +244,6 @@
     "        break\n",
     "    \n",
     "    max_iter += 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Проведем оценку полученной модели. Оценка на тестовом наборе."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict(test_data)\n",
-    "accuracy = accuracy_score(test_labels, y_pred)\n",
-    "print(f'Точность модели на тестовом наборе: {accuracy:.2f}')"
    ]
   },
   {
@@ -288,6 +268,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Проведем оценку полученной модели. Оценка на тестовом наборе."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(test_data)\n",
+    "accuracy = accuracy_score(test_labels, y_pred)\n",
+    "print(f'Точность модели на тестовом наборе: {accuracy:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Мы получили удовлетворительную точность на тестовых и валидационных данных. Теперь проведем исследования зависимости точности классификатора от размеров выборки."
    ]
   },
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
