--- a/LR-2/task.ipynb
+++ b/LR-2/task.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,13 +133,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datagen = ImageDataGenerator(rescale=1./255)\n",
+    "datagen = ImageDataGenerator(rescale=1./255,\n",
+    "    validation_split=0.05)\n",
+    "\n",
     "train_generator = datagen.flow_from_directory(\n",
     "    tar_general_dir,\n",
     "    target_size=(28, 28),\n",
     "    color_mode='grayscale',\n",
     "    batch_size=32,\n",
-    "    class_mode='sparse'\n",
+    "    class_mode='sparse',\n",
+    "    subset=\"training\"\n",
     ")"
    ]
   },
@@ -161,7 +164,8 @@
     "    target_size=(28, 28),\n",
     "    color_mode='grayscale',\n",
     "    batch_size=32,\n",
-    "    class_mode='sparse'\n",
+    "    class_mode='sparse',\n",
+    "    subset=\"validation\"\n",
     ")"
    ]
   },
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
